# tulip

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .zenodo.json  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  Dockerfile.serve  LICENSE  README.md  justfile  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  dependabot-uv-lock.yml  docs.yml  release.yml
benchmarks/: README.md  real_text_suite.yaml  suite.yaml
benchmarks/configs/: char_baseline.yaml  lexical_baseline.yaml  real_text_char.yaml  real_text_lexical.yaml
benchmarks/datasheets/: dgp.yaml  dialektarium.yaml  synthetic.yaml
benchmarks/results/real-text-leaderboard/: README.md
benchmarks/results/synthetic-leaderboard/: leaderboard.md  provenance.json  significance-synthetic-char-baseline.json  significance-synthetic-char-baseline.md  significance-synthetic-lexical-baseline.json  significance-synthetic-lexical-baseline.md
configs/: audio_baseline.yaml  synthetic_audio.yaml  synthetic_family.yaml  synthetic_text.yaml  text_baseline.yaml  text_herbert.yaml  text_svm.yaml
data/: README.md
docs/: architecture.md  benchmark.md  datasets.md  development.md  index.md
docs/guide/: quickstart.md  real-corpus.md  serving.md  synthetic-corpora.md
docs/reference/: data.md  deploy.md  evaluation.md  explain.md  features.md  index.md  pipeline.md  robustness.md
examples/: README.md  compare_models.py  train_and_predict.py  tutorial.ipynb
src/tulip/: __init__.py  _jsonio.py  _serialize.py  _stats.py
src/tulip/cli/: __init__.py  _cite.py  _context.py  _doctor.py  _repro.py  app.py
src/tulip/cli/commands/: __init__.py  analyze.py  cards.py  data.py  inspect.py  leaderboard.py  pipeline.py  predict.py  registry.py  serve.py  training.py
src/tulip/config/: __init__.py  loader.py  schemas.py
src/tulip/core/: __init__.py  exceptions.py  interfaces.py  registry.py  types.py
src/tulip/data/: __init__.py  _paths.py  _synthetic_audio_corpus.py  _synthetic_common.py  _synthetic_corpus.py  _wav.py  augment.py  builder.py  catalog.py  cleaning.py  dedup.py  download.py  fingerprint.py  manifest.py  reading.py  registry.py  splitting.py  synthetic.py  synthetic_audio.py  transcribe.py  validation.py
src/tulip/data/loaders/: __init__.py  _base.py  _hub_audio.py  _stream.py  bigos.py  common_voice.py  dgp.py  dialektarium.py  korpus_spiski.py  mackowce.py  manifest_loader.py  nkjp.py  spokes.py  synthetic.py  synthetic_audio.py
src/tulip/deploy/: __init__.py  _registry_model.py  hub.py  registry_store.py
src/tulip/evaluation/: __init__.py  _format.py  _provenance.py  _provenance_env.py  _suite_loader.py  benchmark.py  benchmark_report.py  calibration.py  cards.py  confusion.py  cross_corpus.py  datasheet.py  efficiency.py  error_analysis.py  fairness.py  hierarchical_metrics.py  leaderboard.py  metrics.py  power.py  predictions.py  report.py  selective.py  significance.py  slicing.py  tracks.py  uncertainty.py
src/tulip/explain/: __init__.py  _shared.py  aggregate.py  attention.py  contrast.py  dialect_evidence.py  lime_explainer.py  linear.py  neighbors.py  registry.py  shap_explainer.py
src/tulip/features/: __init__.py  _composite.py  registries.py
src/tulip/features/audio/: __init__.py  _base.py  composite.py  embeddings.py  loading.py  pooling.py  prosody.py  spectral.py
src/tulip/features/text/: __init__.py  _base.py  _resource.py  _tokenize.py  affixes.py  composite.py  dialect_intensity.py  keywords.py  phonological_rules.py  phonology.py  stylometry.py  vectorizers.py
src/tulip/features/text/lexicons/: dialect_markers.yaml  isoglosses.yaml  phonological_rules.yaml
src/tulip/labels/: __init__.py  geo.py  taxonomy.py
src/tulip/models/: __init__.py  _audio_common.py  _common.py  _encoding.py  _estimator.py  _factory.py  _llm_cache.py  _llm_exemplars.py  _llm_protocol.py  _torch_loops.py  calibration.py  classical.py  ensemble.py  fasttext_model.py  llm_baseline.py  neural_audio.py  neural_audio_embedding.py  neural_audio_finetune.py  neural_text.py  persistence.py  registry.py
src/tulip/pipeline/: __init__.py  _assembly.py  active.py  active_loop.py  calibrated.py  classifier.py  conformal.py  crossval.py  distill.py  experiment.py  explaining.py  fusion.py  hierarchical.py  isogloss_diagnostics.py  learning_curve.py  openset.py  protocols.py  scoring.py  selftrain.py
src/tulip/pipeline/fusion/: __init__.py  classifier.py  comparison.py  strategies.py
src/tulip/pipeline/hierarchical/: __init__.py  classifier.py  policies.py  projection.py
src/tulip/robustness/: __init__.py  perturbations.py  registry.py  report.py  sweep.py
src/tulip/serve/: __init__.py  _demo.py  _guards.py  _metrics.py  app.py  settings.py
src/tulip/utils/: __init__.py  io.py  logging.py  optional.py  seed.py
src/tulip/viz/: __init__.py  _common.py  charts.py  embedding_space.py  map.py  reliability.py
tests/: conftest.py  test_benchmarks_suites.py  test_bug_regressions.py  test_cli_analyze.py  test_cli_app.py  test_cli_cards.py  test_cli_cite.py  test_cli_doctor.py  test_cli_inspect.py  test_cli_leaderboard.py  test_cli_modeling.py  test_cli_openset.py  test_cli_predict.py  test_cli_registry.py  test_cli_repro.py  test_cli_repro_lock.py  test_cli_robustness.py  test_cli_serve.py  test_core_registry.py  test_data_audio_fetch.py  test_data_cleaning_dedup.py  test_data_download.py  test_data_fingerprint.py  test_data_manifest_loaders.py  test_data_splitting_builder.py  test_data_synthetic.py  test_data_synthetic_audio.py  test_data_transcribe.py  test_data_validation.py  test_deploy_hub.py  test_deploy_registry.py  test_evaluation_benchmark.py  test_evaluation_benchmark_report.py  test_evaluation_calibration.py  test_evaluation_cards.py  test_evaluation_confusion.py  test_evaluation_cross_corpus.py  test_evaluation_datasheet.py  test_evaluation_efficiency.py  test_evaluation_error_analysis.py  (+62 more)
