[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
# Distribution name. PyPI already has an unrelated "tulip" (Caltech's Temporal
# Logic Planning toolbox), so the package publishes as tulip-dialect while the
# import package and the CLI stay `tulip`.
name = "tulip-dialect"
version = "0.1.0"
description = "Polish Dialect Typology and Regional Speech Classification Analysis System"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Matthew Miezaniec", email = "matthewmiezaniec1@gmail.com" }]
keywords = [
    "nlp",
    "dialectology",
    "polish",
    "speech-processing",
    "text-classification",
    "machine-learning",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Polish",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "pydantic>=2.5",
    "typer>=0.12",
    "rich>=13.0",
    "PyYAML>=6.0.3",
    "joblib>=1.3",
]

[project.optional-dependencies]
# Gradient-boosting baselines (XGBoost, LightGBM).
boosting = ["xgboost>=2.0", "lightgbm>=4.0"]
# Classical audio feature extraction (MFCC, mel spectrogram, pitch, formants, ...).
audio = ["librosa>=0.10", "soundfile>=0.12", "praat-parselmouth>=0.4"]
# Transformer text models (HerBERT, Polish RoBERTa, mBERT, XLM-R).
transformers = [
    "torch>=2.1",
    "transformers>=4.40",
    "datasets>=2.19",
    "accelerate>=0.30",
    "sentencepiece>=0.2",
]
# Neural speech models (wav2vec2, HuBERT, Whisper, ECAPA-TDNN, x-vectors).
speech = [
    "torch>=2.1",
    "torchaudio>=2.1",
    "transformers>=4.40",
    "speechbrain>=1.1.0",
]
# fastText text classification baseline.
fasttext = ["fasttext-wheel>=0.9.2"]
# Constrained-choice LLM baseline (Claude via the Anthropic SDK).
anthropic = ["anthropic>=0.40"]
# Hugging Face Hub, both directions: loading hosted datasets (Common Voice,
# BIGOS) and pushing registered models with `tulip registry push`.
hf = ["datasets>=2.19", "huggingface_hub>=0.23"]
# Model explainability (SHAP, LIME).
explain = ["shap>=0.45", "lime>=0.2.0.1"]
# Maps, charts, and embedding-space visualisation.
viz = ["folium>=0.16", "plotly>=5.20", "matplotlib>=3.8"]
# UMAP projection for the dialect embedding space (pulls in numba).
umap = ["umap-learn>=0.5"]
# HTTP inference service (single interface for typed text and uploaded audio).
serve = ["fastapi>=0.139.0", "uvicorn[standard]>=0.51.0", "python-multipart>=0.0.9"]
# Documentation site: MkDocs + Material theme + API reference from docstrings.
docs = ["mkdocs>=1.6", "mkdocs-material>=9.5", "mkdocstrings[python]>=0.26"]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    # >=0.11 for the modern "TC" rule prefix (formerly "TCH").
    "ruff>=0.15.21",
    "mypy>=2.2.0",
    "types-PyYAML>=6.0.12.20260518",
    "pre-commit>=4.6.0",
    "hypothesis>=6.156.6",
]

[project.scripts]
tulip = "tulip.cli.app:main"

[project.urls]
Homepage = "https://github.com/Canon-Regularis/tulip"
Documentation = "https://canon-regularis.github.io/tulip/"
Repository = "https://github.com/Canon-Regularis/tulip"
Changelog = "https://github.com/Canon-Regularis/tulip/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/tulip"]

[tool.ruff]
line-length = 100
# Below the >=3.11 runtime floor on purpose: a conservative lint target is
# harmless, and raising it to py311 only surfaces StrEnum rewrite suggestions for
# the frozen (str, Enum) taxonomy classes, which must not change.
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
    "S",   # flake8-bandit (security)
    "PTH", # flake8-use-pathlib
    "RET", # flake8-return
    "TC",  # flake8-type-checking (runtime-only imports behind TYPE_CHECKING)
]
ignore = [
    "SIM108", # ternary is not always clearer
]

[tool.ruff.lint.isort]
known-first-party = ["tulip"]

[tool.ruff.lint.pep8-naming]
ignore-names = ["X"] # scikit-learn fit/transform API convention

# pydantic resolves model annotations at runtime, so an import moved behind
# TYPE_CHECKING would break model construction. Ruff needs to know which bases
# are runtime-evaluated before it may rewrite their modules' imports.
[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = ["pydantic.BaseModel"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "RUF001",
    "RUF002",
    "RUF003", # allow Polish diacritics lookalikes in fixtures
    "S101",   # assert *is* the pytest API
    "S105",   # dummy bearer tokens in serve-guard tests are not real secrets
    "S106",   # (same, passed as a keyword argument)
    "S301",   # the fastText round-trip test deliberately exercises pickle
]
"src/tulip/cli/*" = [
    "B008", # typer.Option/Argument defaults are the typer idiom
    # typer resolves command annotations at runtime to build the parser.
    "TC001",
    "TC002",
    "TC003",
]
# FastAPI resolves endpoint annotations at runtime to build request models.
"src/tulip/serve/*" = ["TC001", "TC002", "TC003"]
# core/ and utils/ are [frozen] per docs/architecture.md: foundation-owned and
# not to be edited. A lint rule is not a good enough reason to break that
# contract, so TC is disabled there rather than autofixed into them.
"src/tulip/core/*" = ["TC001", "TC002", "TC003"]
"src/tulip/utils/*" = ["TC001", "TC002", "TC003"]
# The cleaner's quote/dash tables enumerate the exact typographic characters
# being normalised; the "ambiguous unicode" they contain is the point.
"src/tulip/data/cleaning.py" = ["RUF001"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "slow: long-running tests (deselect with '-m \"not slow\"')",
]

[tool.mypy]
# Type-checked under 3.12 semantics: numpy's bundled stubs use PEP 695 "type"
# statements, which mypy rejects under an older python_version pin. The runtime
# floor is 3.11 (see requires-python), exercised by the CI test matrix whose
# lowest entry is 3.11.
python_version = "3.12"
mypy_path = "src"
packages = ["tulip"]
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
check_untyped_defs = true

[tool.coverage.run]
source = ["tulip"]
branch = true

[tool.coverage.report]
# A floor, not a target. The measured baseline is 77%; 75 gates real regressions
# while tolerating the coverage swing between CI extra sets (torch-backed tests
# skip when the transformers/speech extras are absent).
fail_under = 75
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abc.abstractmethod",
]
